[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/sprite_key-240-240.png" type="Texture" id=1]
[ext_resource path="res://scripts/Key.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 120 )

[node name="Key" type="Area2D" groups=[
"Key",
]]
z_index = -1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.0313726, 0.572549, 0.647059, 1 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Key_area_shape_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
